--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 .venv/
 .ipynb_checkpoints/
 utils/__pycache__/
-node-regtest/.bitcoin/
+
+node-regtest/*
+!node-regtest/.bitcoin
+node-regtest/.bitcoin/*
+!node-regtest/.bitcoin/bitcoin.conf
